--- a/app-plant-web/pom.xml
+++ b/app-plant-web/pom.xml
@@ -22,6 +22,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.nengjun</groupId>
+            <artifactId>app-plant-dao</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
