--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,12 @@
     <packaging>pom</packaging>
     <modules>
         <module>app-plant-web</module>
+        <module>app-plant-dao</module>
     </modules>
 
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
 </project>
