--- a/app-plant-web/pom.xml
+++ b/app-plant-web/pom.xml
@@ -23,6 +23,11 @@
     <dependencies>
         <dependency>
             <groupId>com.nengjun</groupId>
+            <artifactId>avatar-interface</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.nengjun</groupId>
             <artifactId>app-plant-dao</artifactId>
             <version>0.0.1</version>
         </dependency>
