--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <version>0.0.1</version>
     <packaging>pom</packaging>
     <modules>
+        <module>avatar-interface</module>
         <module>app-plant-web</module>
         <module>app-plant-dao</module>
     </modules>
