--- a/app-plant-dao/pom.xml
+++ b/app-plant-dao/pom.xml
@@ -23,6 +23,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.nengjun</groupId>
+            <artifactId>avatar-mybatis</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
