--- a/avatar-utils/pom.xml
+++ b/avatar-utils/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>avatar-utils</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
+    </dependencies>
 </project>
