--- a/app-plant-web/src/main/resources/application-dev.yml
+++ b/app-plant-web/src/main/resources/application-dev.yml
@@ -7,5 +7,6 @@ spring:
     username: root
     password: mysql
     schema: classpath:import.sql
-mybatis:
-  config: classpath:mybatis-config.xml
+logging:
+  level:
+    com.nengjun: TRACE
