--- a/app-plant-web/pom.xml
+++ b/app-plant-web/pom.xml
@@ -29,6 +29,10 @@
             <groupId>com.nengjun</groupId>
             <artifactId>app-plant-dao</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.nengjun</groupId>
+            <artifactId>app-content-dao</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -36,7 +40,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
