--- a/app-plant-web/src/main/resources/application.yml
+++ b/app-plant-web/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 spring:
   profiles:
     active: dev
+  mvc:
+    static-path-pattern: /static/*
 logging:
   file: /var/applogs/app-plant-web/app-plant-web.log
