--- a/app-plant-web/src/main/resources/application-prod.yml
+++ b/app-plant-web/src/main/resources/application-prod.yml
@@ -1,2 +1,8 @@
 globalSetting:
   env: prod
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/plant_prod
+    username: root
+    password: 91jule@MySQL
