--- a/app-plant-web/pom.xml
+++ b/app-plant-web/pom.xml
@@ -22,6 +22,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>7.2.7</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.nengjun</groupId>
             <artifactId>avatar-interface</artifactId>
         </dependency>
