--- a/avatar-search/pom.xml
+++ b/avatar-search/pom.xml
@@ -9,12 +9,21 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>avatar-utils</artifactId>
+    <artifactId>avatar-search</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.nengjun</groupId>
+            <artifactId>avatar-utils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ansj</groupId>
+            <artifactId>ansj_seg</artifactId>
+            <version>5.1.3</version>
         </dependency>
     </dependencies>
 </project>
