--- a/app-plant-web/pom.xml
+++ b/app-plant-web/pom.xml
@@ -39,6 +39,10 @@
             <groupId>com.nengjun</groupId>
             <artifactId>app-content-dao</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.nengjun</groupId>
+            <artifactId>app-shop-dao</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
