--- a/app-plant-web/pom.xml
+++ b/app-plant-web/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>qiniu-java-sdk</artifactId>
             <version>7.2.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.9.1</version>
+        </dependency>
 
         <dependency>
             <groupId>com.nengjun</groupId>
