--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>app-plant-dao</module>
         <module>app-content-dao</module>
         <module>app-shop-dao</module>
+        <module>app-party-dao</module>
     </modules>
 
     <properties>
@@ -75,6 +76,11 @@
             <dependency>
                 <groupId>com.nengjun</groupId>
                 <artifactId>app-shop-dao</artifactId>
+                <version>0.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nengjun</groupId>
+                <artifactId>app-party-dao</artifactId>
                 <version>0.0.1</version>
             </dependency>
 
