--- a/app-plant-web/pom.xml
+++ b/app-plant-web/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.29</version>
+        </dependency>
 
         <dependency>
             <groupId>com.nengjun</groupId>
