--- a/app-plant-web/pom.xml
+++ b/app-plant-web/pom.xml
@@ -57,6 +57,10 @@
             <groupId>com.nengjun</groupId>
             <artifactId>app-party-dao</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.nengjun</groupId>
+            <artifactId>app-todo-dao</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
