--- a/app-plant-web/pom.xml
+++ b/app-plant-web/pom.xml
@@ -69,6 +69,10 @@
             <groupId>com.nengjun</groupId>
             <artifactId>app-user-dao</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.nengjun</groupId>
+            <artifactId>poi-rss-dao</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
